--- a/public_html/css/player_profile.css
+++ b/public_html/css/player_profile.css
@@ -92,16 +92,6 @@
 .player_profile_personalInfo table tr td:last-child {
 	border-left: 1px solid #474B4F;
 }
-.live {
-    color: #FB3B00;
-    animation: blink 1.7s linear infinite;
-    font-weight: bold;
-}
-@keyframes blink {
-  50% {
-    opacity: 0;
-  }
-}
 
 
 /*MOBILE RESPONSIVE*/
@@ -219,6 +209,7 @@
         display: flex;
         justify-content: center;
         flex-direction: row;
+	flex-wrap: wrap;
     }
     .player_profile_circle {
         margin: 40px 20px;
